--- a/template.qmd
+++ b/template.qmd
@@ -1,7 +1,7 @@
 ---
 title: "CEVE 101: Project 03"
-author: "Your Name (your netid)" # CHANGE THIS
-date: "2024-10-23"
+author: "Seth Hallbert sah25" # CHANGE THIS
+date: "2024-12-24"
 
 # do not change anything below this line
 engine: julia
